Z-index fix
so the carousel images slide UNDER the top bar instead of over it

--- a/LESS/index.less
+++ b/LESS/index.less
@@ -39,9 +39,14 @@ img {
   border-radius: 150px;
   border: 2px solid black;
   box-shadow: 0px 0px 25px 3px rgb(2, 2, 2);
+  z-index: -1;
 }
 
 .dogimg {
   border: none;
   box-shadow: 0px 0px 25px 3px rgb(2, 2, 2);
+}
+
+.topbar {
+  z-index: 9999;
 }
